--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -6,13 +6,16 @@
 world: deathswap
 
 # The radius from the origin to distribute players around
-radius: 5000
+radius: 15000
 
 # How many seconds the game start countdown should be
 starting-time: 10
 
 # How many seconds between each swap (default is 300 or 5 minutes)
 swap-time: 300
+
+# How many seconds after start does the first swap happen?
+first-swap: 600
 
 # The location of the lobby spawn (don't touch this, use the command and reload the plugin)
 lobby-spawn:
